--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -15,7 +15,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="table-responsive table-card-responsive">
-                  <table class="table tableWhite">
+                  <table class="table ">
                     <thead>
                       <tr>
                         <th>Select</th>
@@ -112,8 +112,8 @@
   </div>
   <div class="modal-body">
     <div class="table-responsive table-card-responsive">
-    <div class="tableWhite">
-      <table class="table tableWhite">
+    <div class="">
+      <table class="table ">
         <thead>
           <tr>
             <th>Select</th>
@@ -207,7 +207,7 @@
       <h4 class="text-center">Initial Catch Audit</h4>
       <hr class="short">
       <div class="table-responsive table-card-responsive">
-        <table class="table tableWhite">
+        <table class="table ">
           <thead>
             <tr>
               <th>Product Type</th>
@@ -238,7 +238,7 @@
     <h4 class="text-center">Lot History</h4>
     <hr class="short">
     <div class="table-responsive table-card-responsive">
-      <table class="table tableWhite">
+      <table class="table ">
         <thead>
           <tr>
             <th>Operation</th>
