--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -1,36 +1,78 @@
-.modal-body {
-  padding-left: 35px;
-  padding-right: 35px;
-
-  label {
-    font-weight: 400;
+.modal-content {
+  border-radius: 4px;
+  min-width: 100%;
+  outline: none;
+  float: none;
+  margin: 0 auto;
+}
+div.modal-content {
+  border-top-right-radius: 40px;
+  border-top-left-radius: 40px;
+  border: none;
+}
+.modal-header {
+  background-color: #37474F;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  outline: none;
+  border: none;
+  .card-panel-options {
+    float: right;
+    margin-top: -28px;
+    a {
+      color: #FFF;
+      font-size: 14px;
+      outline: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top:10px;
+      padding-bottom: 10px;
+    }
   }
 }
-
+.modal-title {
+  color: #FFF;
+  font-weight: 200;
+}
+.modal-body {
+  margin-left: 15px;
+  margin-right: 15px;
+  label {
+    font-weight: 300;
+  }
+  select.form-control,
+  select.form-control:hover,
+  select.form-control:active {
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #000;
+    background-color: #fff;
+    outline: none;
+    -webkit-appearance: none;
+    -webkit-shadow: none;
+    border-radius: 2px;
+    border: 1px solid #E0E0E0;
+  }
+}
 .modal-order-body {
-  padding-top:20px;
+  padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
 }
-
 div.modal-text {
   width: 80%;
 }
-
-.modal-title {
-  font-weight: 300;
-}
-
 .modal-detail-container {
   padding-left: 20px;
   padding-right: 20px;
-
   span {
-    letter-spacing: 1px;
-
+    font-weight: 400;
   }
-
   h4 {
     font-size: 16px;
+    font-weight: 300;
   }
 }
