--- a/src/css/components/_sidebar.scss
+++ b/src/css/components/_sidebar.scss
@@ -4,11 +4,15 @@
 /* Hide for mobile, show later */
 .sidebar {
   display: none;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  font: $primary-font;
+
 }
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    width: 220px;
+    top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -18,64 +22,58 @@
     overflow-y: auto;
     /* Scrollable contents if viewport is shorter than content. */
     background-color: $side-nav-color;
-    border-right: 1px solid #eee;
   }
 }
 /* Sidebar navigation */
 .nav-sidebar {
+  margin-top: 20px;
+   margin-right: -30px;
+   margin-left: -30px;
   li {
-    h1 {
-      font-size: 18px;
-      font-weight: 500;
-      letter-spacing: 1px;
-      margin-top: 38px;
-    }
-    .sidebar-border {
-      padding-left: 10px;
-      padding-right: 10px;
-      border-bottom: 0.132em solid $secondary-background-color;
-
-    }
     a {
       color: $primary-font-color;
       font-size: 15px;
-      margin-right: -35px;
-      margin-left: -35px;
-      padding-left: 50px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      border-bottom: 0.132em solid $secondary-background-color;
+      padding-left: 40px;
+      padding-right: 10px;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      font-weight: 300;
       &:hover {
         background-color: $secondary-background-color;
-        @include border-radius(2px);
+        @include border-radius(0px);
       }
-      &:active {
-        background-color: $btn-highlight-color;
-        color: white;
-        font-weight: 500;
+      span {
+         font-size: 20px;
+      }
 
-      }
     }
     a.activeTab {
+      text-decoration: none;
+      @include border-radius(0px);
       background-color: $btn-highlight-color;
-      @include border-radius(2px);
+      border-right: 0.372em solid #FFF;
       color: #fff;
-      font-weight:500;
+      font-weight: 400;
 
     }
+
     padding-right: 15px;
     padding-left: 15px;
     // margin: 10px 5px;
   }
 
+  .arrow {
+     float: right;
+ }
 }
-.nav>li>a:focus,
-.nav>li>a:active {
+
+.nav-sidebar>li>a:focus,
+.nav-sidebar>li>a:active {
   text-decoration: none;
-  @include border-radius(2px);
+  @include border-radius(0px);
   background-color: $btn-highlight-color;
+  border-right: 0.372em solid #FFF;
   color: #fff;
-  font-weight:500;
 }
 
 input.search-side-nav {
