--- a/src/views/dashboard.default.orders.invoice.html
+++ b/src/views/dashboard.default.orders.invoice.html
@@ -12,7 +12,7 @@
             </div>
             <div class="panel panel-body">
               <div class="table-responsive">
-                <table class="table tableWhite">
+                <table class="table ">
                   <thead>
                     <tr>
                       <th>Select</th>
@@ -129,7 +129,7 @@
       </fieldset>
       <hr class="short">
       <div class="table-responsive">
-        <table class="table tableWhite">
+        <table class="table ">
           <thead>
             <tr>
               <th>Product</th>
