--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -1,47 +1,37 @@
 <div ng-controller="ProductDisplayCtrl">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Products</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <button ng-click="addProduct()" class="btn-status-success">Add</button>
-                <button ng-click="editProduct()" class="btn-status-default">Edit</button>
-                <button ng-click="deleteProduct(sourcedProduct._id)" class="btn-status-danger">Delete</button>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="table-responsive table-card-responsive">
-                    <table class="table tableWhite">
-                      <thead>
-                        <tr>
-                          <th>Select</th>
-                          <th>Product Name</th>
-                          <th>Description</th>
-                        </tr>
-                      </thead>
-                      <tbody ng-repeat="sourcedProduct in sourcedProducts track by $index">
-                        <tr>
-                          <td data-label="Select">
-                            <input type="radio" ng-model="$parent.selectedProduct" ng-value="$parent.sourcedProducts[$index]">
-                          </td>
-                          <td data-label="Product">{{sourcedProduct.name}}</td>
-                          <!-- <td data-label="Unit Price">${{sourcedProduct.unitPrice}}/{{sourcedProduct.unit}}</td> -->
-                          <td data-label="Description">{{sourcedProduct.description}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                </div>
-              </div>
-            </div>
-          </div>
+  <div class="col-lg-10 main">
+    <div class="card-panel">
+      <div class="card-panel-header">
+        <h2>Products</h2>
+        <div class="card-panel-options">
+          <button class="btn-status-success" ng-click="addProduct()"><i class="fa fa-plus"></i> Add</button>
+          <button class="btn-status-default" ng-click="editProduct()"><i class="fa fa-pencil"></i> Edit</button>
+          <button class="btn-status-danger" ng-click="deleteProduct(sourcedProduct._id)"><i class="fa fa-trash"></i> Delete</button>
         </div>
+      </div>
+      <div class="table-responsive table-card-responsive">
+        <table class="table ">
+          <thead>
+            <tr>
+              <th>Select</th>
+              <th>Product Name</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tbody ng-repeat="sourcedProduct in sourcedProducts track by $index">
+            <tr>
+              <td data-label="Select">
+                <input type="radio" ng-model="$parent.selectedProduct" ng-value="$parent.sourcedProducts[$index]">
+              </td>
+              <td data-label="Product">{{sourcedProduct.name}}</td>
+              <td data-label="Description">{{sourcedProduct.description}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
+</div>
 </div>
 
 
@@ -63,24 +53,21 @@
         <div class="col-lg-6">
           <!-- <div class="panel-scroll"> -->
           <label>Associated Finished Goods</label>
-
           <div class="table-responsive">
-            <table class="table tableWhite">
+            <table class="table ">
               <tbody>
                 <tr ng-repeat="finishedProduct in finishedProducts track by $index">
-                  <!-- <td data-label="Select">
-                    <input type="radio" ng-model="$parent.selectedFinishedProduct" ng-value="$parent.finishedProducts[$index]">
-                  </td> -->
                   <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
-                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button></td>
+                  <td>
+                    <button class="btn-table-danger alignright" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button>
+                  </td>
                 </tr>
                 <tr>
-                  <!-- <td>&nbsp;</td> -->
                   <td>&nbsp;</td>
-                <td class ="table-button-wrapper">&nbsp;
-                  <button class="btn-table-success align-right" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
-                </td>
-              </tr>
+                  <td class="table-button-wrapper">&nbsp;
+                    <button class="btn-table-success alignright" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -119,22 +106,21 @@
           <small class="text-muted">The product name cannot be changed due to traceability reasons.</small>
         </div>
         <div class="col-lg-6">
-          <!-- <div class="panel-scroll"> -->
           <label>Associated Finished Goods</label>
-
           <div class="table-responsive">
-            <table class="table tableWhite">
+            <table class="table ">
               <tbody>
                 <tr ng-repeat="finishedProduct in finishedProducts track by $index">
                   <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
-                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct(finishedProducts[$index]._id)"><i class="fa fa-minus"></i></button><a class='table-edit align-right' ng-click="editFinishedProduct(finishedProducts[$index]._id)">Edit&nbsp;&nbsp;</a></td>
+                  <td>
+                    <button class="btn-table-danger alignright" ng-click="removeFinishedProduct(finishedProducts[$index]._id)"><i class="fa fa-minus"></i></button><a class='table-edit align-right' ng-click="editFinishedProduct(finishedProducts[$index]._id)" href="javascript:void(0)">Edit &nbsp; &nbsp;</a></td>
                 </tr>
                 <tr>
                   <td>&nbsp;</td>
-                <td class ="table-button-wrapper">&nbsp;
-                  <button class="btn-table-success align-right" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
-                </td>
-              </tr>
+                  <td class="table-button-wrapper">&nbsp;
+                    <button class="btn-table-success alignright" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -170,8 +156,8 @@
           <label>Product Name &nbsp;
             <span ng-show="productRequired" class="input-required"> * Required</span>
           </label>
-          <input class="form-control" name="name" ng-model="name"  placeholder="ex. Coho Salmon Filleted" required='true'>
-          <small class="text-muted">Please enter the full finished good type  name.</small>
+          <input class="form-control" name="name" ng-model="name" placeholder="ex. Coho Salmon Filleted" required='true'>
+          <small class="text-muted">Please enter the full finished good type name.</small>
         </div>
       </fieldset>
 
@@ -185,7 +171,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Product Number</label>
-          <input class="form-control" ng-model="productNumber"  placeholder="Custom product number (ex. UPC, SKU)">
+          <input class="form-control" ng-model="productNumber" placeholder="Custom product number (ex. UPC, SKU)">
         </div>
       </fieldset>
     </form>
