--- a/src/views/dashboard.default.sales-management.menu.html
+++ b/src/views/dashboard.default.sales-management.menu.html
@@ -7,7 +7,7 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="table-responsive">
-                                    <table class="table tableWhite">
+                                    <table class="table ">
                                         <thead>
                                             <tr>
                                                 <th>#</th>
