--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -1,30 +1,21 @@
-$btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Supply Chain Builder</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <button ng-click="addStage()" class="btn-status-success">Add</button>
-                <!-- <button ng-disabled="noNodeSelected" ng-click="editStage()" class="btn-status-default">Edit</button> -->
-                <button ng-click="editStage()" class="btn-status-default">Edit</button>
-                <button ng-click="linkStages()" class="btn-status-default">Link</button>
-                <button ng-click="unlinkStages()" class="btn-status-default">Unlink</button>
-                <!-- <button ng-disabled="noNodeSelected" ng-click="deleteStage()" class="btn-status-danger">Delete</button> -->
-                <button ng-click="deleteStage()" class="btn-status-danger">Delete</button>
-                <button ng-click="saveSupplyChain()" class="btn-status-success">Save</button>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-body" style="height:500px">
-                <vis-network data="data" options="options" events="events" height="100px"></vis-network>
-              </div>
-            </div>
-          </div>
+<div ng-controller="SupplyChainDisplayCtrl">
+  <div class="col-lg-10 main">
+    <div class="card-panel">
+      <div class="card-panel-header">
+        <h2>Supply Chain Builder</h2>
+        <div class="card-panel-options">
+          <div class="col-lg-12 invisible-block">Invisible</div>
+          <button ng-click="addStage()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
+          <button ng-click="editStage()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
+          <button ng-click="linkStages()" class="btn-status-default"><i class="fa fa-link"></i> Link</button>
+          <button ng-click="unlinkStages()" class="btn-status-default"><i class="fa fa-link"></i> Unlink</button>
+          <button ng-click="deleteStage()" class="btn-status-danger"><i class="fa fa-trash"></i> Delete</button>
+          <button ng-click="saveSupplyChain()" class="btn-status-success"><i class="fa fa-floppy-o"></i> Save</button>
         </div>
       </div>
+      <div style="height:500px">
+      <vis-network data="data" options="options" events="events" height="100px"></vis-network>
+    </div>
     </div>
   </div>
 </div>
@@ -52,15 +43,9 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
       </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-6">
-          <!-- <label>Sales Channel</label> -->
           <label>
             <input type="checkbox" ng-model="isSellingPoint"> Sales Channel</label>
         </div>
-        <!-- <div class="col-lg-6">
-          <label>Display on E-commerce</label>
-          <input class="form-control" ng-model="isEcommerce" type="checkbox">
-          </select>
-        </div> -->
       </fieldset>
     </form>
   </div>
@@ -85,15 +70,9 @@ $btn-success-hover-color;<div ng-controller="SupplyChainDisplayCtrl">
       </fieldset>
       <fieldset class="form-group">
           <div class="col-lg-6">
-            <!-- <label>Sales Channel</label> -->
             <label>
               <input type="checkbox" ng-model="isSellingPoint"> Sales Channel</label>
           </div>
-        <!-- <div class="col-lg-6">
-          <label>Display on E-commerce</label>
-          <input class="form-control" ng-model="isEcommerce" type="checkbox">
-          </select>
-        </div> -->
       </fieldset>
     </form>
   </div>
