--- a/src/views/dashboard.default.supply-chain.create.html
+++ b/src/views/dashboard.default.supply-chain.create.html
@@ -1,28 +1,24 @@
-<div ng-controller="SupplyChainCreateCtrl" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <h2 class="page-header light-text">Supply Chains</h2>
-  <div class="row placeholders">
-    <div class="col-lg-8">
-      <div class="container">
-        <div class="panel-container">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <form ng-submit="createSupplyChain()">
-                <fieldset class="form-group">
-                  <br>
-                  <div class="col-lg-8 col-lg-offset-2">
-                    <label>Name of Supply Chain</label>
-                    <input class="form-control" ng-model="name" placeholder="ex. Joseph's Supply Chain">
-                    <small class="text-muted">Maximum 30 characters.</small>
-                  </div>
-                </fieldset>
-                <button ng-disabled="isSubmitButtonDisabled()" type="submit" class="btn-status-success">Submit</button>
-                <button ui-sref="dashboard.default.supply-chain.menu" type="submit" class="btn-status-danger">Cancel</button>
-                <br>
-              </form>
-            </div>
-          </div>
-        </div>
+<div ng-controller="SupplyChainCreateCtrl">
+  <div class="col-lg-10 main" ng-controller="TrackInventoryMenuCtrl">
+    <div class="card-panel">
+      <div class="card-panel-header">
+        <h2>Supply Chains</h2>
       </div>
+      <form ng-submit="createSupplyChain()">
+        <fieldset class="form-group">
+          <br>
+          <div class="col-lg-8 col-lg-offset-2">
+            <label>Name of Supply Chain</label>
+            <input class="form-control" ng-model="name" placeholder="ex. Joseph's Supply Chain">
+            <small class="text-muted">Maximum 30 characters.</small>
+          </div>
+        </fieldset>
+        <div class="text-center">
+        <button ng-disabled="isSubmitButtonDisabled()" type="submit" class="btn-status-success">Submit</button>
+        <button ui-sref="dashboard.default.supply-chain.menu" type="submit" class="btn-status-danger">Cancel</button>
+      </div>
+      </form>
+      <br>
     </div>
   </div>
 </div>
