--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -22,9 +22,9 @@
           <li class="hide"><a ui-sref=".default.orders.menu">Orders</a></li>
           <li class="hide"><a ui-sref=".default.customers.menu">Customers</a></li>
 
-          <li><a ui-sref=".settings.general">Settings</a></li>
-          <li><a ui-sref=".help.overview">Help</a></li>
-          <li><a ng-click="logout()" href="#">Logout</a></li>
+          <li><a ui-sref=".settings.general"><i class="fa fa-gear"></i> Settings</a></li>
+          <li><a ui-sref=".help.overview"><i class="fa fa-question"></i> Help</a></li>
+          <li><a ng-click="logout()" href="#"><i class="fa fa-sign-out"></i> Logout</a></li>
         </ul>
       </div>
     </div>
