--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -16,7 +16,7 @@
             </div>
             <div class="panel panel-body">
               <div class="table-responsive table-card-responsive">
-                <table class="table tableWhite">
+                <table class="table ">
                   <thead>
                     <tr>
                       <th>User Name</th>
