--- a/src/views/dashboard.help.overview.html
+++ b/src/views/dashboard.help.overview.html
@@ -1,29 +1,20 @@
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <br><br>
-          <div class="col-lg-8">
-            <div class="container">
-      <div class="panel-container">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="panel-setting-heading">
-              <h1>Coastline PDF Guide Download</h1>
-              <br>
-              <a class="btn-status-success btn-size-large" target="_self" href="https://s3.amazonaws.com/coastline-us/Coastline+Platform+User+Guide+(updated+21.04.2016).pdf" download="coastline-guide.pdf">PDF Guide Download</a>
-              <br><br>
-              <hr class="short">
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/picuG_92HoQ?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a brief overview of the Coastline platform.
-                  <br>
-                  <br> For the detailed instruction guide (with step by step videos), please click the relevant tabs on the left navigation bar.
-                       A comprehensive paper guide can also be downloaded by clicking the green "PDF Guide Download" button above.</h4>
-              </div>
-            </div>
-          </div>
+<div class="col-lg-10 main">
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Coastline PDF Guide Download</h2>
+      <div class="card-panel-options">
+        <button class="btn-status-success" target="_self" href="https://s3.amazonaws.com/coastline-us/Coastline+Platform+User+Guide+(updated+21.04.2016).pdf" download="coastline-guide.pdf">PDF Guide Download</button>
+      </div>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/picuG_92HoQ?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a brief overview of the Coastline platform.<br><br>
+          For the detailed instruction guide (with step by step videos), please click the relevant tabs on the left navigation bar.
+                 A comprehensive paper guide can also be downloaded by clicking the green "PDF Guide Download" button above..</h4>
         </div>
       </div>
     </div>
