--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -52,7 +52,7 @@
 <!-- MANUAL CUSTOMER INPUT MODAL-->
 <script type="text/ng-template" id="addCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add a Customer</h3>
+    <h3 class="modal-title">Add a Customer</h3>
   </div>
   <div class="modal-body">
     <form name="addCustomerForm">
@@ -136,7 +136,7 @@
 <!-- EDIT ORDER INPUT MODAL-->
 <script type="text/ng-template" id="editCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Customer</h3>
+    <h3 class="modal-title">Edit Customer</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -174,7 +174,7 @@
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Product</h3>
+    <h3 class="modal-title">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this customer?
