--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -18,7 +18,7 @@
 <!-- VIEW INVENTORY MODAL-->
 <script type="text/ng-template" id="viewBlocksModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Inventory in {{stageName}}</h3>
+    <h3 class="modal-title">Inventory in {{stageName}}</h3>
   </div>
   <div class="modal-body">
     <div class="row">
@@ -71,7 +71,7 @@
 <!-- ADD BATCH MODAL-->
 <script type="text/ng-template" id="addBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add Seafood Batch</h3>
+    <h3 class="modal-title">Add Seafood Batch</h3>
   </div>
   <div class="modal-body">
     <ul class="nav nav-tabs" ng-init="item=1">
@@ -171,7 +171,7 @@
 <!-- EDIT BATCH MODAL-->
 <script type="text/ng-template" id="editBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Seafood Batch</h3>
+    <h3 class="modal-title">Edit Seafood Batch</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -201,7 +201,7 @@
 <!-- DELETE BATCH MODAL-->
 <script type="text/ng-template" id="deleteBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Batch</h3>
+    <h3 class="modal-title">Delete Batch</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this seafood batch?</p>
@@ -216,7 +216,7 @@
 <!-- MOVE BATCH MODAL-->
 <script type="text/ng-template" id="moveBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Move Inventory Batch</h3>
+    <h3 class="modal-title">Move Inventory Batch</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -264,7 +264,7 @@
 <!-- MOVE BATCH TO SALES MODAL-->
 <script type="text/ng-template" id="moveBlockToSalesModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Move Inventory Batch to Sales</h3>
+    <h3 class="modal-title">Move Inventory Batch to Sales</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -300,7 +300,7 @@
 <!-- VIEW BATCH DETAILS MODAL-->
 <script type="text/ng-template" id="viewDetailsModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Inventory Batch Details</h3>
+    <h3 class="modal-title">Inventory Batch Details</h3>
   </div>
   <div class="modal-body">
     <div class="card-panel">
