--- a/src/views/dashboard.default.orders.invoice.html
+++ b/src/views/dashboard.default.orders.invoice.html
@@ -50,7 +50,7 @@
 <!-- MANUAL ORDER INPUT MODAL-->
 <script type="text/ng-template" id="addOrderModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add an Invoice</h3>
+    <h3 class="modal-title">Add an Invoice</h3>
   </div>
   <div class="modal-body">
     <form>
