--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -50,70 +50,13 @@
     </ul>
   </div>
   </div>
-
-<!--
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Manage Orders</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body alignleft">
-                <button ng-click="addOrder()" class="btn-status-success">Add</button>
-                <button ng-click="deleteOrder()" class="btn-status-danger">Delete</button>
-                <button ng-click="editOrder()" class="btn-status-default">Edit</button>
-                <button ng-hide="isLoadingPDF" ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default"><i class="fa fa-file-pdf-o"></i> PDF</button>
-                <button ng-show="isLoadingPDF" class="btn-status-success">Loading...</button>
-                <button ng-click="exportOrders()" ng-hide="isLoading" class="btn-status-default"><i class="fa fa-file-excel-o"></i> Excel</button>
-                <button ng-show="isLoading" class="btn-status-success" type="button">Loading...</button>
-                <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default"><i class="fa fa-filter"></i> Filter</button>
-                <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default"><i class="fa fa-filter"></i> Clear Filter</button>
-              </div>
-            </div>
-            <div class="panel panel-body">
-              <div class="table-responsive table-card-responsive">
-                <table class="table ">
-                  <thead>
-                    <tr>
-                      <th>Select</th>
-                      <th>Invoice #</th>
-                      <th>Customer Name</th>
-                      <th>Status</th>
-                      <th>Invoice Date </th>
-                      <th>Total Amount</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr ng-repeat="order in orders track by $index">
-                      <td data-label="Select">
-                        <input type="radio" ng-model="$parent.selectedOrder" ng-value="$parent.orders[$index]">
-                      </td>
-                      <td data-label="Invoice">&nbsp; {{order.invoiceNumber}}</td>
-                      <td data-label="Name">{{order.customerName}}</td>
-                      <td data-label="Status">&nbsp;{{order.status}}</td>
-                      <td data-label="Date">{{order.date | date:'M/d/yyyy'}}</td>
-                      <td data-label="Subtotal">${{totals[$index]}}</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <ul class="pagination pagination-md">
-                <li ng-repeat="page in paginationArray track by $index" ng-class="{active:pageIndex==$index}"><a href="javascript:void()" ng-click="setPageIndex($index)">{{$index + 1}}</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
 
 
 <!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Customer Order #{{order.invoiceNumber}}</h3>
+    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
 
   <div class="modal-body">
@@ -166,7 +109,7 @@
 <!-- MANUAL ORDER INPUT MODAL-->
 <script type="text/ng-template" id="addOrderModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add an Invoice</h3>
+    <h3 class="modal-title">Add an Invoice</h3>
   </div>
   <div class="modal-body">
     <ul class="nav nav-tabs">
@@ -401,7 +344,7 @@
 <!-- MANUAL ORDER INPUT MODAL-->
 <script type="text/ng-template" id="editOrderModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Invoice</h3>
+    <h3 class="modal-title">Edit Invoice</h3>
   </div>
   <div class="modal-body">
     <ul class="nav nav-tabs">
@@ -576,7 +519,7 @@
 <!-- FILTER ORDERS MODAL-->
 <script type="text/ng-template" id="views/modals/order-filter.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Filter Order Criteria</h3>
+    <h3 class="modal-title">Filter Order Criteria</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -639,7 +582,7 @@
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteOrderModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Product</h3>
+    <h3 class="modal-title">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this order?
@@ -656,7 +599,7 @@
 <!-- CUSTOMER AUTOFILL MODAL-->
 <script type="text/ng-template" id="loadCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Choose Existing Customer</h3>
+    <h3 class="modal-title">Choose Existing Customer</h3>
   </div>
   <div class="modal-body">
     <div class="panel-scroll">
