--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -38,7 +38,7 @@
 <!-- ADD SOURCED PRODUCT MODAL-->
 <script type="text/ng-template" id="addProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add a Product</h3>
+    <h3 class="modal-title">Add a Product</h3>
   </div>
   <div class="modal-body">
     <form name="addProductForm" ng-init="item=0">
@@ -93,7 +93,7 @@
 <!-- EDIT SOURCED PRODUCT MODAL-->
 <script type="text/ng-template" id="editProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Product</h3>
+    <h3 class="modal-title">Edit Product</h3>
   </div>
   <div class="modal-body">
     <form name="addProductForm" ng-init="item=0">
@@ -147,7 +147,7 @@
 <!-- ADD FINISHED PRODUCT MODAL-->
 <script type="text/ng-template" id="addFinishedProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add a Finished Good Type</h3>
+    <h3 class="modal-title">Add a Finished Good Type</h3>
   </div>
   <div class="modal-body">
     <form name="addProductForm" ng-init="item=0">
@@ -189,7 +189,7 @@
 <!-- EDIT FINISHED GOOD MODAL-->
 <script type="text/ng-template" id="editFinishedGoodModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add Finished Good</h3>
+    <h3 class="modal-title">Add Finished Good</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -243,7 +243,7 @@
 <!-- ADD FINISHED GOOD MODAL-->
 <script type="text/ng-template" id="addFinishedGoodModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add Finished Good</h3>
+    <h3 class="modal-title">Add Finished Good</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -298,7 +298,7 @@
 <!-- DELETE PRODUCT MODAL-->
 <script type="text/ng-template" id="deleteProductModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Product</h3>
+    <h3 class="modal-title">Delete Product</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this product?</p>
