--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -23,7 +23,7 @@
 <!-- ADD SUPPLY CHAIN STAGE MODAL -->
 <script type="text/ng-template" id="addModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add a Stage</h3>
+    <h3 class="modal-title">Add a Stage</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -59,7 +59,7 @@
 <!-- EDIT SUPPLY CHAIN STAGE MODAL -->
 <script type="text/ng-template" id="editModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Stage Name</h3>
+    <h3 class="modal-title">Edit Stage Name</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -86,7 +86,7 @@
 <!-- LINK SUPPLY CHAIN STAGES MODAL -->
 <script type="text/ng-template" id="linkModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Link Supply Chain Stages</h3>
+    <h3 class="modal-title">Link Supply Chain Stages</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -112,7 +112,7 @@
 <!-- UNLINK SUPPLY CHAIN STAGES MODAL -->
 <script type="text/ng-template" id="unlinkModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Unlink Stages</h3>
+    <h3 class="modal-title">Unlink Stages</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -138,7 +138,7 @@
 <!-- DELETE SUPPLY CHAIN STAGE MODAL -->
 <script type="text/ng-template" id="deleteStageModal.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Stage</h3>
+    <h3 class="modal-title">Delete Stage</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this stage?</p>
