--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -38,7 +38,7 @@
 <!-- DELETE BATCH MODAL-->
 <script type="text/ng-template" id="deleteSupplyChain.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Delete Supply Chain</h3>
+    <h3 class="modal-title">Delete Supply Chain</h3>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete this supply chain?</p>
@@ -53,7 +53,7 @@
 <!-- EDIT SUPPLY CHAIN STAGE MODAL -->
 <script type="text/ng-template" id="renameSupplyChain.html">
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit Supply Chain Name</h3>
+    <h3 class="modal-title">Edit Supply Chain Name</h3>
   </div>
   <div class="modal-body">
     <form>
