--- a/src/views/dashboard.help.catch-history.html
+++ b/src/views/dashboard.help.catch-history.html
@@ -1,23 +1,15 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <br><br>
-    <div class="col-lg-8">
-      <div class="container">
-      <div class="panel-container">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="panel-setting-heading">
-              <h1>Tracking Seafood Batch History</h1>
-              <hr class="short">
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/b9-tu_v0sXI?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a demonstration on how to track your seafood batch history.
-              </div>
-            </div>
-          </div>
+<div class="col-lg-10 main">
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Tracking Seafood Batch History</h2>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/b9-tu_v0sXI?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a demonstration on how to track your seafood batch history.</h4>
         </div>
       </div>
     </div>
