--- a/src/views/dashboard.help.inventory.html
+++ b/src/views/dashboard.help.inventory.html
@@ -1,35 +1,30 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <br>
-  <br>
-  <div class="col-lg-8">
-    <div class="container">
-      <div class="panel-container">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="panel-setting-heading">
-              <h1>Adding an Inventory Batch</h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/nbjY4xEm8-k?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a demonstration on how to add an inventory batch.
-              </div>
-            </div>
-            <hr class="short">
-
-            <h1>Moving an Inventory Batch</h1>
-
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/69UXciBY2gA?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a demonstration on how to move your inventory batches.
-              </div>
-            </div>
-          </div>
+<div class="col-lg-10 main">
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Adding an Inventory Batch</h2>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/nbjY4xEm8-k?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a demonstration on how to add an inventory batch.</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Moving an Inventory Batch</h2>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/69UXciBY2gA?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a demonstration on how to move your inventory batches.</h4>
         </div>
       </div>
     </div>
