--- a/src/views/dashboard.help.orders-invoices.html
+++ b/src/views/dashboard.help.orders-invoices.html
@@ -1,35 +1,30 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <br>
-  <br>
-  <div class="col-lg-8">
-    <div class="container">
-      <div class="panel-container">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="panel-setting-heading">
-              <h1>Adding an Order</h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cQ4Pl2Bwm9M?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a demonstration on how to add a customer order and auto-generate an invoice.
-              </div>
-            </div>
-            <hr class="short">
-
-            <h1>Managing and Exporting Your Orders</h1>
-
-            <div class="row">
-              <div class="col-lg-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qKshU95nXkw?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <h4>Please refer to this video for a demonstration on how to manage your orders and export invoices and sales data to Excel or PDF.
-              </div>
-            </div>
-          </div>
+<div class="col-lg-10 main">
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Adding an Order</h2>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/cQ4Pl2Bwm9M?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a demonstration on how to add a customer order and auto-generate an invoice.</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-panel">
+    <div class="card-panel-header">
+      <h2>Managing and Exporting Your Orders</h2>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/qKshU95nXkw?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-6">
+          <h4>Please refer to this video for a demonstration on how to manage your orders and export invoices and sales data to Excel or PDF.</h4>
         </div>
       </div>
     </div>
