--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -1,163 +1,124 @@
 <div ng-controller="FisherySettingsCtrl">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Fishery Settings</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="panel-setting">
-                  <form>
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Name</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="name" type="text"></input>
-                              <small class="text-muted">Change the name of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>City/Town</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="city" type="text" placeholder="New York"></input>
-                              <small class="text-muted">Change the city/town of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Main Phone</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="phone" placeholder="555-555-5555" type="text"></input>
-                              <small class="text-muted">Change the main phone number of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Fax</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="faxPhone" placeholder="555-555-5555" type="text"></input>
-                              <small class="text-muted">Change the fax number of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Tax Number (i.e. HST #)</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" placeholder="896437985" ng-model="taxNumber" type="text"></input>
-                              <small class="text-muted">Change the tax redemption number that appears on your invoices.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-                      </div>
-
-                      <div class="col-lg-6">
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Business Address</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="address" type="text" placeholder="80 Whycliff Road"></input>
-                              <small class="text-muted">Change the address of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>State/Province</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="state" type="text" placeholder="i.e. Maine"></input>
-                              <small class="text-muted">Change the state/province of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Postal/Zip Code</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
-                              <small class="text-muted">Change the postal/postalCode code of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Sales Phone</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
-                              <small class="text-muted">Change the sales phone number of your fishery.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Fishery Logo</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-                              <small class="text-muted">PNG and JPG files only</small>
-                              <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"></div>
-                            </div>
-                        </fieldset>
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <fieldset class="form-group">
-                          <div class="row">
-                              <label>Invoice Purchase Disclaimer</label>
-                              <textarea ng-disabled="(isLoading || isDisabled)" class="form-control" type="text" name="disclaimer" ng-model="disclaimer"
-                              placeholder="ex. TERMS: Due to the nature of seafood, please check your order immediately.
-                              1. All quality problems must be reported to your sales rep within 12 hours.
-                              2. Any short shipments must be marked on carrier's waybill or if delivered by our truck on the delivery copy of the invoice.
-                              3. Any shrink or mortality in excess of allowable amounts must be reported within 12 hours.
-                              4. Do not dispose of disputed stock without written approval of sales rep.
-                              5. Interest will be charged on past due invoices at the rate of 2% per month (24% per year)."></textarea>
-                              <small class="text-muted">Please enter the disclaimer to be displayed on your invoice</small>
-                        </fieldset>
-                        </div>
-                        <div align="right" class="panel-setting">
-                          <button ng-disabled="isSubmitButtonDisabled() || isDisabled" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
-                        </div>
-                  </form>
-                  </div>
-                  </div>
+  <div class="col-lg-10 main">
+    <div class="card-panel">
+      <div class="card-panel-header">
+        <h2>Fishery Settings</h2>
+      </div>
+      <div class="panel-body">
+        <div class="panel-setting">
+          <form>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>Name</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="name" type="text"></input>
+                  <small class="text-muted">Change the name of your fishery.</small>
                 </div>
-              </div>
+                <div class="col-lg-6">
+                  <label>City/Town</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="city" type="text" placeholder="New York"></input>
+                  <small class="text-muted">Change the city/town of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>Main Phone</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="phone" placeholder="555-555-5555" type="text"></input>
+                  <small class="text-muted">Change the main phone number of your fishery.</small>
+                </div>
+                <div class="col-lg-6">
+                  <label>Fax</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="faxPhone" placeholder="555-555-5555" type="text"></input>
+                  <small class="text-muted">Change the fax number of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>Tax Number (i.e. HST #)</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" placeholder="896437985" ng-model="taxNumber" type="text"></input>
+                  <small class="text-muted">Change the tax redemption number that appears on your invoices.</small>
+                </div>
+                <div class="col-lg-6">
+                  <label>Business Address</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="address" type="text" placeholder="80 Whycliff Road"></input>
+                  <small class="text-muted">Change the address of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>State/Province</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="state" type="text" placeholder="i.e. Maine"></input>
+                  <small class="text-muted">Change the state/province of your fishery.</small>
+                </div>
+                <div class="col-lg-6">
+                  <label>Postal/Zip Code</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
+                  <small class="text-muted">Change the address of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>Postal/Zip Code</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
+                  <small class="text-muted">Change the postal/postalCode code of your fishery.</small>
+                </div>
+                <div class="col-lg-6">
+                  <label>Sales Phone</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
+                  <small class="text-muted">Change the sales phone number of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6">
+                  <label>Postal/Zip Code</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
+                  <small class="text-muted">Change the postal/postalCode code of your fishery.</small>
+                </div>
+                <div class="col-lg-6">
+                  <label>Sales Phone</label>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="555-555-5555" type="text"></input>
+                  <small class="text-muted">Change the sales phone number of your fishery.</small>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-6 alignright">
+                  <label>Fishery Logo</label>
+                  <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+                  <small class="text-muted">PNG and JPG files only</small>
+                  <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"></div>
+                </div>
+              </fieldset>
+            </div>
+            <div class="row">
+              <fieldset class="form-group">
+                <div class="col-lg-12">
+                <label>Invoice Purchase Disclaimer</label>
+                <textarea ng-disabled="(isLoading || isDisabled)" class="form-control" type="text" name="disclaimer" ng-model="disclaimer" placeholder="ex. TERMS: Due to the nature of seafood, please check your order immediately.
+      1. All quality problems must be reported to your sales rep within 12 hours.
+      2. Any short shipments must be marked on carrier's waybill or if delivered by our truck on the delivery copy of the invoice.
+      3. Any shrink or mortality in excess of allowable amounts must be reported within 12 hours.
+      4. Do not dispose of disputed stock without written approval of sales rep.
+      5. Interest will be charged on past due invoices at the rate of 2% per month (24% per year)."></textarea>
+                <small class="text-muted">Please enter the disclaimer to be displayed on your invoice</small>
+              </fieldset>
             </div>
           </div>
+            <button ng-disabled="isSubmitButtonDisabled() || isDisabled" ng-click="saveChanges()" class="btn-status-success alignright">Save Changes</button>
+          </form>
         </div>
       </div>
     </div>
+  </div>
+</div>
