--- a/src/views/modals/order-filter.html
+++ b/src/views/modals/order-filter.html
@@ -1,7 +1,7 @@
 <!-- FILTER ORDERS MODAL-->
 <script type="text/ng-template" id="views/modals/order-filter.html">
     <div class="modal-header">
-      <h3 class="modal-title text-center">Filter Order Criteria</h3>
+      <h3 class="modal-title">Filter Order Criteria</h3>
     </div>
     <div class="modal-body">
       <form>
