--- a/src/views/dashboard.help.overview.html
+++ b/src/views/dashboard.help.overview.html
@@ -1,7 +1,7 @@
 <div class="col-lg-10 main">
   <div class="card-panel">
     <div class="card-panel-header">
-      <h2>Coastline PDF Guide Download</h2>
+      <h2>PDF Guide</h2>
       <div class="card-panel-options">
         <button class="btn-status-success" target="_self" href="https://s3.amazonaws.com/coastline-us/Coastline+Platform+User+Guide+(updated+21.04.2016).pdf" download="coastline-guide.pdf">PDF Guide Download</button>
       </div>
