--- a/src/views/forgot-password.html
+++ b/src/views/forgot-password.html
@@ -10,7 +10,7 @@
             <form role="form" ng-controller="loginCtrl" ng-submit="sendResetLink()">
               <div class="panel-login-body">
                 <div class="panel-login-error" ng-show="usernameRequired">
-                  <p class="text-center">The credentials below are incorrect. Please try again.</p>
+                  <p class="text-center">The credentials entered below do not exist. Please try again.</p>
                 </div><br>
               <fieldset>
                 <div class="form-group">
