--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -10,7 +10,7 @@
             <form role="form" ng-controller="loginCtrl" ng-submit="signUp()">
               <div class="panel-login-body">
                 <div class="panel-login-error" ng-show="usernameRequired || passwordRequired ||emailRequired || accountTypeRequired">
-                  <p class="text-center">Please fill out all of the fields below.</p>
+                  <p class="text-center">The credentials below are already in use or incomplete. Please try again.</p>
                 </div><br>
                 <fieldset>
                   <div class="row">
